--- a/index.html
+++ b/index.html
@@ -1,8 +1,68 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>ganiiiie</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ganiiiie</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background:rgb(255, 222, 249);
+            color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+        .container {
+            background-color: rgba(255, 255, 255, 0.9);
+            border-radius: 20px;
+            padding: 40px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+            max-width: 600px;
+            width: 100%;
+            text-align: center;
+        }
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 30px;
+            text-transform: uppercase;
+            color: pink;
+        }
+        ul {
+            padding: 0;
+            list-style-type: none;
+            text-align: left;
+        }
+        li {
+            font-size: 1rem;
+            margin-bottom: 20px;
+            border-bottom: 1px solid #ccc;
+            color: black;
+            padding-bottom: 20px;
+
+        }
+        li:last-child {
+            border-bottom: none;
+            margin-bottom: 0;
+            padding-bottom: 0;
+        }
+    </style>
 </head>
 <body>
-<h1>변가은의 페이지에 오신 걸 환영합니다. </h1>
+    <div class="container">
+        <h1>Welcome Ganiiie</h1>
+        <ul>
+            <li>사진) <img src="LP.jpg" alt=""></li>
+            <li>이름) 변가은 (Byun Gaeun)</li>
+            <li>Email) bge345@gmail.com</li>
+            <li>기술 스택) HTML, CSS, 파이썬</li>
+            <li>대학 정보) 동양미래대학교 컴퓨터소프트웨어공학과 2024학번</li>
+            <li>기술 개발 경험) 웹 프로그래밍 기초 조별 과제 레시피 공유 홈페이지 제작</li>
+        </ul>
+    </div>
 </body>
 </html>
